force-app/main/default/objects/fw1__Recurring_Invoice_Line_Usage__c/fw1__Recurring_Invoice_Line_Usage__c.object-meta.xml
<CustomObject>
    <label>Recurring Invoice Line Usage</label>
    <nameField>
        <label>Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Invoice Line Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>