force-app/main/default/objects/fw1__Recurring_Invoice_Line_Usage__c/fields/fw1__Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>fw1__Additional_Charge__c</fullName>
    <label>Additional Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>