force-app/main/default/objects/fw1__Recurring_Invoice_Line_Usage__c/fields/fw1__Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Amount__c</fullName>
    <formula>IF(OR(fw1__Quantity__c = null, fw1__Quantity__c = 0), 
fw1__Unit_Price__c, 
fw1__Quantity__c * fw1__Unit_Price__c)
+
fw1__Additional_Charge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>