force-app/main/default/objects/fw1__Recurring_Invoice_Line_Usage__c/fields/fw1__Recurring_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recurring_Invoice_Line__c</fullName>
    <label>Recurring Invoice Line</label>
    <referenceTo>fw1__Recurring_Invoice_Line__c</referenceTo>
    <relationshipLabel>Recurring Invoice Line Usages</relationshipLabel>
    <relationshipName>Recurring_Invoice_Line_Usages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>