force-app/main/default/objects/fw1__Recurring_Invoice_Line_Usage__c/fields/fw1__Recurring_Usage_Holding_File__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recurring_Usage_Holding_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Usage Holding File</label>
    <referenceTo>fw1__Recurring_Usage_Holding_File__c</referenceTo>
    <relationshipLabel>Recurring Invoice Line Usages</relationshipLabel>
    <relationshipName>Recurring_Invoice_Line_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>